--- a/bookclub/package.json
+++ b/bookclub/package.json
@@ -3,23 +3,29 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0-next.0",
+    "@angular/cli": "~14.0.0-next.2",
     "@angular/common": "^14.0.0-next.0",
     "@angular/compiler": "^14.0.0-next.0",
+    "@angular/compiler-cli": "^14.0.0-next.0",
     "@angular/core": "^14.0.0-next.0",
     "@angular/forms": "^14.0.0-next.0",
     "@angular/platform-browser": "^14.0.0-next.0",
     "@angular/platform-browser-dynamic": "^14.0.0-next.0",
     "@angular/router": "^14.0.0-next.0",
+    "express": "^4.17.3",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.5.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -35,5 +41,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
+  },
+  "engines": {
+    "node": "17.2.0",
+    "npm": "8.5.1"
   }
 }
