--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0-next.0",
-    "@angular/cli": "~14.0.0-next.2",
     "@angular/common": "^14.0.0-next.0",
     "@angular/compiler": "^14.0.0-next.0",
-    "@angular/compiler-cli": "^14.0.0-next.0",
     "@angular/core": "^14.0.0-next.0",
     "@angular/forms": "^14.0.0-next.0",
     "@angular/platform-browser": "^14.0.0-next.0",
@@ -30,7 +28,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.0-next.2",
-    "@angular/cli": "~14.0.0-next.2",
+    "@angular/cli": "^13.2.5",
     "@angular/compiler-cli": "^14.0.0-next.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
